Commit other files

--- a/public/views/global/sidebar.html
+++ b/public/views/global/sidebar.html
@@ -1,7 +1,7 @@
-<div ng-controller="sourceAppController" layout="column" style="height:500px;">
-    <section layout="column" flex>
+<div ng-controller="sourceAppController" style="height:500px;">
+    <section>
         <md-sidenav class="md-sidenav-left md-whiteframe-z5" md-component-id="left">
-            <md-toolbar class="md-theme-light" layout="column" layout-align="center center">
+            <md-toolbar class="md-theme-light">
                 <h1 class="md-toolbar-tools">Add Source</h1>
             </md-toolbar>
             <md-content class="md-padding" layout="column" layout-align="space-around center">
