--- a/public/views/partial/sources-edit.html
+++ b/public/views/partial/sources-edit.html
@@ -1,27 +1,49 @@
 <!-- sources-edit.html -->
 <div ng-controller="sourceAppController">
-    <md-content>
-        <md-card ng-repeat="source in sources" class="md-whiteframe-z2">
-            <md-card-content>
-                <md-input-container>
-                    <label>Name</label>
-                    <input ng-model="source.name">
-                </md-input-container>
-                <md-input-container>
-                    <label>Provider</label>
-                    <input ng-model="source.provider">
-                </md-input-container>
-                <md-input-container>
-                    <label>Url</label>
-                    <input ng-model="source.url">
-                </md-input-container>
-                <md-input-container>
-                    <label>Source Url</label>
-                    <input ng-model="source.source">
-                </md-input-container>
-            </md-card-content>
-        </md-card>
-    </md-content>
+    <div class="header">
+        <div>
+            <md-card layout="row" layout-align="center center" ng-repeat="source in sources | filter: editFilter" class="md-whiteframe-z2">
+                <md-card-content layout="column" flex="20">
+                    <p>Name: {{ source.name }}</p>
+                    <p>Provider: {{ source.provider }}</p>
+                </md-card-content>
+                <md-card-content layout="column" flex="70">
+                    <p>Url: {{ source.url }}</p>
+                    <p>Source Url: {{ source.source }}</p>
+                </md-card-content>
+                <md-card-content>
+                    <a class="btn md-raised md-primary" href="/#/edit/{{source}}">
+                        <i class="fa fa-pencil"></i>
+                        Edit
+                    </a>
+                </md-card-content>
+            </md-card>
+        </div>
+        <div class="buttons">
+            <a href="#/edit" ng-click="open()" class="demo">Demo</a>
+            <a href="https://github.com/likeastore/ngDialog#api" class="docs">★ Docs</a>
+        </div>
+    </div>
+
+    <div class="hr"></div>
+
+    <script type="text/ng-template" id="secondDialog">
+        <div class="ngdialog-message" ng-controller="sourceAppController">
+            <h2>And even more!</h2>
+            <ul class="mt">
+                <li>Load your templates as strings, ng-template tags or html partials</li>
+                <li>ngDialog.js is < 2kb when minified!</li>
+                <li>It has simple, extendable and elegant API ;)</li>
+            </ul>
+            <div class="mt">Spread a word about it:</div>
+        </div>
+        <div class="mt">
+            <a href="http://twitter.com/home?status=ngDialog.js - modal windows and popups provider for Angular.js applications, via @likeastore!+http://likeastore.github.io/ngDialog/" class="action-btn" ng-like>Tweet</a>
+            <a href="http://www.facebook.com/share.php?u=http://likeastore.github.io/ngDialog" class="action-btn" ng-like>Like</a>
+            <a href="https://github.com/likeastore/ngDialog#ngdialog" class="action-btn read" target="_blank">Read docs</a>
+        </div>
+    </script>
+
 </div>
 
 <div ui-view></div>
